# Sunatra

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  README.md  TODO.md  build.py  conftest.py  install.py  main.py  publish.py  pyproject.toml  version.json
.github/workflows/: ci.yml  release.yml
chrome_extension/: content.js  manifest.json  popup.html  popup.js
core/: config_manager.py  downloader.py  manifest.py  theme.py  utils.py  version.py
docs/: Gemfile  _config.yml  authentication.md  building.md  extension.md  faq.md  filters.md  index.md  install.md
firefox_extension/: background.js  injected.js  manifest.json
services/: media_keys.py  telemetry.py  token_server.py  updater.py
sunatra/: __init__.py  __main__.py  app.py
sunatra/core/: app_meta.py  config_manager.py  downloader.py  manifest.py  theme.py  utils.py  version.py
sunatra/services/: bug_reporter.py  discord.py  updater.py
sunatra/ui/: downloader_tab.py  downloads_tab.py  ignored_tab.py  layouts.py  library.py  lyrics.py  metadata_editor.py  player.py  settings.py  tooltip.py  vault.py  widgets.py
tests/: test_app_meta.py  test_filters.py  test_manifest.py  test_telemetry.py  test_updater.py  test_utils.py
ui/: dashboard.py  downloader_tab.py  downloads_tab.py  ignored_tab.py  layouts.py  library.py  lyrics.py  metadata_editor.py  player.py  settings.py  sidebar.py  tooltip.py  vault.py  widgets.py
